# debug-monitor

./: README.md  pyproject.toml
debug_monitor/: app.css  app.py  console.py  messages.py  widgets.py
